--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ github.is_project_page: false
 github.is_user_page: false
 plugins:
   - jekyll-redirect-from
+
+redirect_from:
+  -/_rd/SimulaRetreatPoster23
+
